# graspit_interface

./: .travis.yml  CMakeLists.txt  README.md  package.xml
action/: AutoOpen.action  CheckGraspReachability.action  GraspExecution.action  PlanGrasps.action  SetRobotDesiredDOF.action
ci/: install.sh  linux_install.sh
include/: graspit_interface.h
launch/: graspit_interface.launch
msg/: Body.msg  Contact.msg  Energy.msg  Grasp.msg  GraspStatus.msg  GraspableBody.msg  Planner.msg  PregraspParams.msg  Robot.msg  SearchContact.msg  SearchEnergy.msg  SearchSpace.msg  SimAnnParams.msg  TableGraspPose.msg  TableGraspPoseArray.msg  TactileSensorData.msg
scripts/: launch_graspit.sh
src/: graspit_interface.cpp  main.cpp
srv/: ApproachToContact.srv  AutoGrasp.srv  ClearWorld.srv  ComputeEnergy.srv  ComputeQuality.srv  DynamicAutoGraspComplete.srv  FindInitialContact.srv  FindTableGrasps.srv  ForceRobotDOF.srv  GetBodies.srv  GetBody.srv  GetDynamics.srv  GetGraspableBody.srv  GetObstacle.srv  GetRobot.srv  ImportGraspableBody.srv  ImportRobot.srv  MoveDOFToContacts.srv  SetBodyPose.srv  SetDynamics.srv  SetGraspableBodyPose.srv  SetObstaclePose.srv  SetRobotDesiredDOF.srv  SetRobotPose.srv  ToggleAllCollisions.srv
